tests/ui/feature-gates/feature-gate-needs-allocator.stderr
error[E0658]: the `#[needs_allocator]` attribute is an experimental feature
  --> $DIR/feature-gate-needs-allocator.rs:1:1
   |
LL | #![needs_allocator]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(allocator_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
