tests/ui/feature-gates/feature-gate-needs-allocator.rs
#![needs_allocator] //~ ERROR the `#[needs_allocator]` attribute is

fn main() {}
